ola-parser/src/testdata/syntaxTests/nameAndTypeResolution/compoundAssignment/tuple_invalid_inline_array_type.sol
contract C {
    fn f() pure public {
        uint x;
        (x, ) = ([100e100]);
    }
}
// ----
// TypeError 9563: (78-85): Invalid mobile type.
